Finalizando footer - ultima linha

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
 
       <footer id="footer" class="pt-5">
         <div class="container">
-          <div class="row justify-content-between">
+          <div class="row justify-content-between" id="footer-texts">
             <div class="col-md-auto">
               <div class="logo mb-5">
                 <a href="https://leouve.com.br">
@@ -1019,7 +1019,7 @@
               </div>
             </div>
             <div class="col-md-auto">
-              <div class="row">
+              <div class="row" id="footer-row">
                 <div class="col-auto menu mr-5">
                   <h4>Cidades:</h4>
                   <div class="menu-rodape-1-container">
@@ -1166,8 +1166,8 @@
               <div class="col-md-auto">
                 <p>
                   Desenvolvido por
-                  <a href="https://bw2.com.br/" target="_blank"
-                    >BW2 Tecnologia</a
+                  <a href="https://github.com/felipepcastilhos/news-portal" target="_blank"
+                    >Felipe e Juan</a
                   >
                 </p>
               </div>
