--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                 <p>Contato: leouve@gruporscom.com.br</p>
               </div>
               <div class="socials">
-                <ul>
+                <ul id="footer-social">
                   <li>
                     <a
                       href="https://play.google.com/store/apps/details?id=app.mobihaus.leouve"
@@ -1020,7 +1020,7 @@
             </div>
             <div class="col-md-auto">
               <div class="row" id="footer-row">
-                <div class="col-auto menu mr-5">
+                <div class="col-auto menu mr-5" id="cidades">
                   <h4>Cidades:</h4>
                   <div class="menu-rodape-1-container">
                     <ul id="menu-rodape-1" class="menu">
@@ -1160,13 +1160,14 @@
               </div>
             </div>
           </div>
-          <hr />
           <div class="container">
             <div class="row justify-content-end py-3 bw2">
               <div class="col-md-auto">
                 <p>
                   Desenvolvido por
-                  <a href="https://github.com/felipepcastilhos/news-portal" target="_blank"
+                  <a
+                    href="https://github.com/felipepcastilhos/news-portal"
+                    target="_blank"
                     >Felipe e Juan</a
                   >
                 </p>
