--- a/index.html
+++ b/index.html
@@ -470,8 +470,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- publieditorial -->
-                <!--  -->
                 <div id="publieditorial" class="mb-4">
                   <div class="title-section mb-3">
                     Publieditorial
@@ -490,12 +488,26 @@
                     </div>
                   </div>
                 </div>
-              </div>
+                <!-- leouve tv -->
                 <!--  -->
-                 <!-- leouve tv -->
+                <div id="leouve-tv" class="mb-3">
+                  <div class="title-section mb-3">
+                    Leouve TV
+                  </div>
+                  <div class="video" style="background-image: url('https://img.youtube.com/vi/XTpDkqUIzpY/0.jpg');">
+                    <div class="video-container">
+                      <div class="content" data-video="https://www.youtube.com/embed/XTpDkqUIzpY?autoplay=1">
+                        <h3 class="title">
+                          O Caminhoneiro guiado pelo coração!
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--  -->
+              </div>
               </div>
             </div>
-            <!--  -->
           </div>
         </div>
       </section>
