--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col-8" id="radios">
               <div
-                class="swiper swiperRadios swiper-initialized swiper-horizontal swiper-pointer-events" id="header-row"
-              >
+                class="swiper swiperRadios swiper-initialized swiper-horizontal swiper-pointer-events" id="header-row">
                 <div
                   class="swiper-slide swiper-slide-duplicate"
                   data-swiper-slide-index="0"
@@ -120,6 +119,7 @@
                   aria-live="assertive"
                   aria-atomic="true"
                 ></span>
+              </div>
             </div>
 
             <div class="col-auto" id="player">
@@ -509,7 +509,6 @@
               </div>
             </div>
           </div>
-        </div>
       </section>
       <footer id="footer" class="pt-5">
         <div class="container">
