--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <a
-                      href="/noticias/noticia1.html"
+                      href="noticias\noticia1.html"
                     >
                       <div class="thumbnail">
                         <img
@@ -270,7 +270,7 @@
                     </div>
                     <h3 class="title mb-2">
                       <a
-                        href="/noticias/noticia1.html"
+                        href="noticias\noticia1.html"
                       >
                         Brasil conquista oito medalhas no terceiro dia de
                         Paralimpíadas Paris 2024
@@ -294,7 +294,7 @@
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <a
-                      href="https://leouve.com.br/estado/vendas-no-pavilhao-da-agricultura-familiar-da-expointer-ja-superam-r-7-milhoes"
+                      href="noticias\noticia2.html"
                     >
                       <div class="thumbnail">
                         <img
@@ -315,7 +315,7 @@
                   </div>
                   <div class="col-md-8 pl-4">
                     <a
-                      href="https://leouve.com.br/categoria/negocios/producao-rural"
+                      href="noticias\noticia2.html"
                       class="category"
                     >
                       AGRO RURAL
@@ -323,7 +323,7 @@
                     <div id="segunda_frase" class="hat">ESTIMATIVA</div>
                     <h3 class="title mb-2">
                       <a
-                        href="https://leouve.com.br/estado/vendas-no-pavilhao-da-agricultura-familiar-da-expointer-ja-superam-r-7-milhoes"
+                        href="noticias\noticia2.html"
                       >
                         Vendas no Pavilhão da Agricultura Familiar da Expointer
                         já superam R$ 7 milhões
@@ -347,7 +347,7 @@
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <a
-                      href="https://leouve.com.br/esportesbr/juventude-e-inter-se-enfrentam-neste-domingo-pelo-brasileirao-no-jaconi"
+                      href="noticias\noticia3.html"
                     >
                       <div class="thumbnail">
                         <img
@@ -376,7 +376,7 @@
                     <div id="segunda_frase" class="hat">BRASILEIRÃO</div>
                     <h3 class="title mb-2">
                       <a
-                        href="https://leouve.com.br/esportesbr/juventude-e-inter-se-enfrentam-neste-domingo-pelo-brasileirao-no-jaconi"
+                        href="noticias\noticia3.html"
                       >
                         Juventude e Inter se enfrentam neste domingo, pelo
                         Brasileirão, no Jaconi
@@ -400,7 +400,7 @@
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <a
-                      href="https://leouve.com.br/esportesbr/paralimpiadas/brasil-conquista-dupla-medalha-no-atletismo-durante-as-paralimpiadas"
+                      href="noticias\noticia4.html"
                     >
                       <div class="thumbnail">
                         <img
@@ -429,7 +429,7 @@
                     <div id="segunda_frase" class="hat">OURO E PRATA</div>
                     <h3 class="title mb-2">
                       <a
-                        href="https://leouve.com.br/esportesbr/paralimpiadas/brasil-conquista-dupla-medalha-no-atletismo-durante-as-paralimpiadas"
+                        href="noticias\noticia4.html"
                       >
                         Brasil conquista dupla medalha no atletismo durante as
                         Paralimpíadas
@@ -438,7 +438,7 @@
                     <div class="infos">
                       <div class="author">
                         <a
-                          href="https://leouve.com.br/author/claudia-debona"
+                          href="noticias\noticia4.html"
                           title="Posts de Cláudia Debona"
                           rel="author"
                           >Cláudia Debona</a
