--- a/noticias/noticia1.html
+++ b/noticias/noticia1.html
@@ -239,8 +239,13 @@
         </div>
       </div> -->
       <section id="single">
-        <div class="container">
-          <div class="row" id="bodytextinfo">
+        <div class="container" style="
+    height: 2500px;
+    padding-left: 100px;
+    padding-right: 100px;>
+          <div class="row" id="bodytextinfo" style="
+    height: 3000px;
+">
             <div class="col-md-12">
               <h1 class="title mb-4">Brasil conquista oito medalhas no terceiro dia de Paralimpíadas Paris 2024</h1>
               <div class="excerpt mb-4">
