Correcao height container single pag noticiasç
as

--- a/noticias/noticia2.html
+++ b/noticias/noticia2.html
@@ -239,7 +239,7 @@
         </div>
       </div> -->
       <section id="single">
-        <div class="container">
+        <div class="container" id="second">
             <div class="col-md-12">
               <h1 class="title mb-4">Vendas no Pavilhão da Agricultura Familiar da Expointer já superam R$ 7 milhões</h1>
               <div class="excerpt mb-4">
