--- a/noticias/noticia3.html
+++ b/noticias/noticia3.html
@@ -239,7 +239,7 @@
 			</div>
 		  </div> -->
 		  <section id="single">
-			<div class="container">
+			<div class="container" id="third">
 				<div class="col-md-12">
 				  <h1 class="title mb-4">Juventude e Inter se enfrentam neste domingo, pelo Brasileirão, no Jaconi</h1>
 				  <div class="excerpt mb-4">
