Correcoes tags extras html

--- a/noticias/noticia3.html
+++ b/noticias/noticia3.html
@@ -225,19 +225,6 @@
 			  </div>
 			</div>
 		  </nav>
-		  <!--  -->
-		  <!-- <div id="search-form">
-			<div class="container">
-			  <div class="row">
-				<div class="col-md-12">
-				  <form method="get" id="searchform" action="https://leouve.com.br">
-					<input class="text" type="text" placeholder="Faça uma busca por assunto ou palavra-chave" name="s" id="s">
-					<button type="submit"> Buscar </button>
-				  </form>
-				</div>
-			  </div>
-			</div>
-		  </div> -->
 		  <section id="single">
 			<div class="container" id="third">
 				<div class="col-md-12">
@@ -315,44 +302,6 @@
 							z-index: 9999999999 !important;
 						}
 					  </style>
-					  <!-- <div class="st-adunit st-adunit-tagged st-reset st-show" style="height: 0px; left: 150px; position: absolute; top: 483px; width: 0px; z-index: 2147483647;">
-						<div class="st-adunit-ad st-reset">
-						  <div class="st-display-render st-reset open 300x600" style="position: absolute; pointer-events: none;">
-							<div class="st-canvas st-reset vertical-static" style="height: 428px; width: 640px; opacity: 1; transition: opacity 1s; pointer-events: none;">
-							  <div class="x-to-close st-reset" style="bottom: initial; cursor: pointer; height: 18px; left: 428px; position: absolute; top: 4px; width: 18px; z-index: 2147483647; pointer-events: initial;">
-								<style>
-								  .st-placement .x-to-close.st-reset {
-									height: 18px !important;
-									width: 18px !important;
-								  }
-								</style>
-								<svg viewBox="0 0 83.6 83.6" xmlns="http://www.w3.org/2000/svg">
-								  <path d="M39.3 78.5C17.6 78.5 0 61 0 39.3 0 17.6 17.6 0 39.3 0 61 0 78.5 17.6 78.5 39.3 78.5 61 61 78.5 39.3 78.5" fill="#1D1D1B" opacity="0.7"></path>
-								  <path d="M21.6 56.9l34.8-34.8M56.4 56.9L21.6 22.1" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 6.353;"></path>
-								</svg>
-							  </div>
-							  <style>
-								#seedtag_creative_573 {
-									border: initial !important;
-									height: 600px !important;
-									left: 340px !important;
-									position: absolute !important;
-									top: -172px !important;
-									bottom: initial !important;
-									width: 300px !important;
-									transform: scale3d(0.7133333333333334, 0.7133333333333334, 1) !important;
-									transform-origin: right bottom !important;
-									pointer-events: initial !important;
-									z-index: 2147483646 !important
-								}
-							  </style>
-							  <iframe id="seedtag_creative_573" title="seedtag_creative_573" name="seedtag_creative" scrolling="no" class="st-reset">
-								
-							  </iframe>
-							</div>
-						  </div>
-						</div>
-					   </div> -->
 					  <div style="height: 0px; left: 150px; position: absolute; top: 526px; width: 0px; z-index: 2147483647;" class="st-adunit st-adunit-tagged st-reset st-show">
 						<div class="st-adunit-ad st-reset">
 						  <div style="position: absolute; pointer-events: none;" class="st-display-render st-reset open 728x90">
@@ -367,71 +316,68 @@
 				  <p class="thumbnail-caption">
 						Equipes estão próximas na tabela do Brasileirão. Foto: Fernando Alves / EC Juventude                     
 				  </p>
-				<article id="post-content" class="my-5">
-						<div class="xdj266r x11i5rnm xat24cr x1mh8g0r x1vvkbs x126k92a">
-	<div dir="auto">Juventude e Internacional se enfrentam pela 25ª rodada do Brasileirão neste domingo (01º), às 18h30, no Estádio Alfredo Jaconi. Será o sétimo confronto entre os times na temporada.</div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">Embalado <a href="https://leouve.com.br/esportesbr/futebol/juventude-vence-o-corinthians-no-jaconi-e-abre-vantagem-nas-quartas-de-final-da-copa-do-brasil">após a vitória sobre o Corinthians, pela Copa do Brasil</a>, o time jaconero quer reencontrar a vitória no Brasileirão para retornar à zona de classificação da Copa Sul-Americana. Já o colorado vem de quatro pontos sobre o Cruzeiro e também sobe na tabela.</div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto">Suspensos, o zagueiro Zé Marcos e o meia Nenê desfalcam o Juventude. Rodrigo Sam forma zaga ao lado de Danilo Boza e Jean Carlos assume na meia. O volante Jadson reassume a titularidade no meio de campo, depois de dois jogos suspenso.</div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">O time deve jogar com: <strong>Gabriel; João Lucas, Danilo Boza, Rodrigo Sam e Alan Ruschel; Luis Oyama, Jadson e Jean Carlos; Lucas Barbosa, Erick Farias e Ronie Carrillo.</strong></div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">O Inter, do técnico Roger Machado, ganhou retornos importantes nas últimas rodadas, como do meia Alan Patrick e do centroavante Borré. O goleiro Rochet, que cumpriu suspensão no meio de semana, também volta. O zagueiro Rogel, expulso contra o Cruzeiro, dará lugar a Vitão. O Inter deve jogar com:<strong> Rochet; Bruno Gomes (Nathan), Vitão, Robert Renan (Igor Gomes) e Bernabei; Fernando, Thiago Maia, Bruno Tabata e Gabriel Carvalho (Alan Patrick); Wesley e Borré.</strong></div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">A arbitragem será de Marcelo de Lima Henrique (CE), auxiliado por Renan Aguiar Da Costa (CE) e por Márcia Bezerra Lopes (RO).</div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">Cada sócio do Juventude, em dia com as mensalidades, pode comprar até quatro ingressos extras por R$ 20 cada um. Ingresso geral, inclusive para a torcida do Inter, custa R$ 180 antecipado e R$ 200 no dia do jogo.</div>
-	<div dir="auto"></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto">A Esporte Serra transmite o jogo, em parceria com o Portal Leouve, pelo link: <span class="html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs"><a class="x1i10hfl xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x1sur9pj xkrqix3 x1fey0fg" tabindex="0" role="link" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fyoutube.com%2Flive%2FHAuaLPh6mhg%3Ffeature%3Dshare%26fbclid%3DIwZXh0bgNhZW0CMTAAAR2Y0sCopsjrA2Hta-zsdB-9jT8NE87dyXQ8FctmSKAIMklOw4RGRnyTqzA_aem_4fZZblzpT-zsww6PDbulQw&amp;h=AT0RT-sH_XLbz2EHkWXco5kjthE4Pv90ycchQZIbmt6w420XwvFiJve8VjgUkiX2qrSY3kqlGmgP418NnkLUcaR1rZpZg1qRtZoOgpvWBLJsUQeGW84JAyrV76YLk0_so60W5K6Gy6BguUNcxZPY&amp;__tn__=-UK-R&amp;c[0]=AT28y4Qj8-eszWQ78AVDG9w2a1qyVzyhjX-Fsvdbo7PfWQN-RlGqu94pFblA6gYJA_XqqqZevK4pR1P8QjFzzAzWMD_owlWzNW_TVvv4poIinP-hARAFsNHKZ3XKwhHGEEAKVvI8Iv81vCw4JYrBVplhYPNUHDnmBKfpPfAvSToCgiSRZMuHBjQXKSCA0x99OJ7cww2zreec7GbR4Ee10EA05L6ERdKkMBep" target="_blank" rel="nofollow noopener noreferrer">https://youtube.com/live/HAuaLPh6mhg?feature=share</a></span></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto"><span class="highlighter highlight">Ficha Técnica:</span></div>
-	<div dir="auto"></div>
-	<div dir="auto">Copa do Brasil – Brasileirão 2024 – Rodada 25</div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto"><strong>Juventude x Internacional</strong></div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto">Local: Estádio Alfredo Jaconi (Caxias do Sul/RS)</div>
-	<div dir="auto">Data: 01º/09/2024 [Domingo] – 18h30</div>
-	<div dir="auto">Arbitragem: Marcelo de Lima Henrique (CE), auxiliado por Renan Aguiar Da Costa (CE) e por Márcia Bezerra Lopes (RO)</div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto">JUVENTUDE: Gabriel; João Lucas, Danilo Boza, Rodrigo Sam e Alan Ruschel; Oyama, Jadson e Jean Carlos; Lucas Barbosa, Erick Farias e Ronie Carrillo. Técnico: Jair Ventura.</div>
-	<div dir="auto">INTERNACIONAL: Rochet; Bruno Gomes (Nathan), Vitão, Robert Renan (Igor Gomes) e Bernabei; Fernando, Thiago Maia, Bruno Tabata e Gabriel Carvalho (Alan Patrick); Wesley e Borré.</div>
-	<div dir="auto">Técnico: Roger Machado.</div>
-	</div>
-	<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
-	<div dir="auto"></div>
-	<div dir="auto">A cobertura da dupla Ca-Ju no Portal Leouve tem o oferecimento de Supermercados Andreazza.</div>
-	</div>
-
+					<article id="post-content" class="my-5">
+					<div class="xdj266r x11i5rnm xat24cr x1mh8g0r x1vvkbs x126k92a">
+						<div dir="auto">Juventude e Internacional se enfrentam pela 25ª rodada do Brasileirão neste domingo (01º), às 18h30, no Estádio Alfredo Jaconi. Será o sétimo confronto entre os times na temporada.</div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">Embalado <a href="https://leouve.com.br/esportesbr/futebol/juventude-vence-o-corinthians-no-jaconi-e-abre-vantagem-nas-quartas-de-final-da-copa-do-brasil">após a vitória sobre o Corinthians, pela Copa do Brasil</a>, o time jaconero quer reencontrar a vitória no Brasileirão para retornar à zona de classificação da Copa Sul-Americana. Já o colorado vem de quatro pontos sobre o Cruzeiro e também sobe na tabela.</div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto">Suspensos, o zagueiro Zé Marcos e o meia Nenê desfalcam o Juventude. Rodrigo Sam forma zaga ao lado de Danilo Boza e Jean Carlos assume na meia. O volante Jadson reassume a titularidade no meio de campo, depois de dois jogos suspenso.</div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">O time deve jogar com: <strong>Gabriel; João Lucas, Danilo Boza, Rodrigo Sam e Alan Ruschel; Luis Oyama, Jadson e Jean Carlos; Lucas Barbosa, Erick Farias e Ronie Carrillo.</strong></div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">O Inter, do técnico Roger Machado, ganhou retornos importantes nas últimas rodadas, como do meia Alan Patrick e do centroavante Borré. O goleiro Rochet, que cumpriu suspensão no meio de semana, também volta. O zagueiro Rogel, expulso contra o Cruzeiro, dará lugar a Vitão. O Inter deve jogar com:<strong> Rochet; Bruno Gomes (Nathan), Vitão, Robert Renan (Igor Gomes) e Bernabei; Fernando, Thiago Maia, Bruno Tabata e Gabriel Carvalho (Alan Patrick); Wesley e Borré.</strong></div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">A arbitragem será de Marcelo de Lima Henrique (CE), auxiliado por Renan Aguiar Da Costa (CE) e por Márcia Bezerra Lopes (RO).</div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">Cada sócio do Juventude, em dia com as mensalidades, pode comprar até quatro ingressos extras por R$ 20 cada um. Ingresso geral, inclusive para a torcida do Inter, custa R$ 180 antecipado e R$ 200 no dia do jogo.</div>
+						<div dir="auto"></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto">A Esporte Serra transmite o jogo, em parceria com o Portal Leouve, pelo link: <span class="html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs"><a class="x1i10hfl xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x1sur9pj xkrqix3 x1fey0fg" tabindex="0" role="link" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fyoutube.com%2Flive%2FHAuaLPh6mhg%3Ffeature%3Dshare%26fbclid%3DIwZXh0bgNhZW0CMTAAAR2Y0sCopsjrA2Hta-zsdB-9jT8NE87dyXQ8FctmSKAIMklOw4RGRnyTqzA_aem_4fZZblzpT-zsww6PDbulQw&amp;h=AT0RT-sH_XLbz2EHkWXco5kjthE4Pv90ycchQZIbmt6w420XwvFiJve8VjgUkiX2qrSY3kqlGmgP418NnkLUcaR1rZpZg1qRtZoOgpvWBLJsUQeGW84JAyrV76YLk0_so60W5K6Gy6BguUNcxZPY&amp;__tn__=-UK-R&amp;c[0]=AT28y4Qj8-eszWQ78AVDG9w2a1qyVzyhjX-Fsvdbo7PfWQN-RlGqu94pFblA6gYJA_XqqqZevK4pR1P8QjFzzAzWMD_owlWzNW_TVvv4poIinP-hARAFsNHKZ3XKwhHGEEAKVvI8Iv81vCw4JYrBVplhYPNUHDnmBKfpPfAvSToCgiSRZMuHBjQXKSCA0x99OJ7cww2zreec7GbR4Ee10EA05L6ERdKkMBep" target="_blank" rel="nofollow noopener noreferrer">https://youtube.com/live/HAuaLPh6mhg?feature=share</a></span></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto"><span class="highlighter highlight">Ficha Técnica:</span></div>
+						<div dir="auto"></div>
+						<div dir="auto">Copa do Brasil – Brasileirão 2024 – Rodada 25</div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto"><strong>Juventude x Internacional</strong></div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto">Local: Estádio Alfredo Jaconi (Caxias do Sul/RS)</div>
+						<div dir="auto">Data: 01º/09/2024 [Domingo] – 18h30</div>
+						<div dir="auto">Arbitragem: Marcelo de Lima Henrique (CE), auxiliado por Renan Aguiar Da Costa (CE) e por Márcia Bezerra Lopes (RO)</div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto">JUVENTUDE: Gabriel; João Lucas, Danilo Boza, Rodrigo Sam e Alan Ruschel; Oyama, Jadson e Jean Carlos; Lucas Barbosa, Erick Farias e Ronie Carrillo. Técnico: Jair Ventura.</div>
+						<div dir="auto">INTERNACIONAL: Rochet; Bruno Gomes (Nathan), Vitão, Robert Renan (Igor Gomes) e Bernabei; Fernando, Thiago Maia, Bruno Tabata e Gabriel Carvalho (Alan Patrick); Wesley e Borré.</div>
+						<div dir="auto">Técnico: Roger Machado.</div>
+					</div>
+					<div class="x11i5rnm xat24cr x1mh8g0r x1vvkbs xtlvy1s x126k92a">
+						<div dir="auto"></div>
+						<div dir="auto">A cobertura da dupla Ca-Ju no Portal Leouve tem o oferecimento de Supermercados Andreazza.</div>
+					</div>
 					</article>
 				</div>
 			  </div>
-			</div>
 		  </section>
-		  <!-- /// -->
 		  <section id="more-related" class="mb-5">
 			<div class="container">
 			  <div class="row">
@@ -615,14 +561,12 @@
 					  </div>
 					</div>
 					<div id="swiper-more-related" class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-b797f551020851aa4" aria-disabled="false"></div>
-					<!-- <div id="swiper-more-related" class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-b797f551020851aa4" aria-disabled="true"></div> -->
 					<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
 				  </div>
 				</div>
 			  </div>
 			</div>
 		  </section>
-		  <!--  -->
 		  <section id="more-author" class="mb-5">
 			<div class="container">
 			  <div class="row">
@@ -696,7 +640,7 @@
 						  </div>
 						</a>
 						<h3 class="title">
-						  <a href="https://leouve.com.br/esportesbr/caxias-faz-ultimo-jogo-na-temporada-neste-sabado-diante-do-csa-al"">
+						  <a href="https://leouve.com.br/esportesbr/caxias-faz-ultimo-jogo-na-temporada-neste-sabado-diante-do-csa-al">
 								Caxias faz último jogo na temporada, neste sábado, diante do CSA-AL                                            
 						  </a>
 						</h3>
@@ -754,8 +698,8 @@
 						</div>
 					  </div>
 					</div>
-					<div id="swiper-more-related" class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="false"></div>
-					<div id="swiper-more-related" class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="true"></div>
+					<div id="swiper-more-related-1" class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="false"></div>
+					<div id="swiper-more-related-2" class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="true"></div>
 					<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
 				  </div>
 				</div>
