--- a/noticias/noticia2.html
+++ b/noticias/noticia2.html
@@ -649,8 +649,8 @@
                     </div>
                   </div>
                 </div>
-                <div id="swiper-more-related" class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="false"></div>
-                <div id="swiper-more-related" class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="true"></div>
+                <div id="swiper-more-related-1" class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="false"></div>
+                <div id="swiper-more-related-2" class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-c2285e301710698310" aria-disabled="true"></div>
                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               </div>
             </div>
