--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     >
                       AGRO RURAL
                     </a>
-                    <div id="segunda_frase" class="hat">ESTIMATIVA</div>
+                    <div id="segunda_frase-1" class="hat">ESTIMATIVA</div>
                     <h3 class="title mb-2">
                       <a
                         href="noticias\noticia2.html"
@@ -373,7 +373,7 @@
                     >
                       ESPORTES.BR
                     </a>
-                    <div id="segunda_frase" class="hat">BRASILEIRÃO</div>
+                    <div id="segunda_frase-2" class="hat">BRASILEIRÃO</div>
                     <h3 class="title mb-2">
                       <a
                         href="noticias\noticia3.html"
@@ -426,7 +426,7 @@
                     >
                       ESPORTES.BR
                     </a>
-                    <div id="segunda_frase" class="hat">OURO E PRATA</div>
+                    <div id="segunda_frase-3" class="hat">OURO E PRATA</div>
                     <h3 class="title mb-2">
                       <a
                         href="noticias\noticia4.html"
@@ -448,6 +448,36 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="form-container" style="margin-top: 70px;margin-left: 100px;">
+                <h3 class="title mb-2">
+                  Formulário
+                </h3>
+                <form action="#" method="post">
+                  <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="cpf">CPF:</label>
+                    <input type="text" id="cpf" name="cpf" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="data-nascimento">Data de Nascimento:</label>
+                    <input type="date" id="data-nascimento" name="data-nascimento" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                  </div>
+                  <div class="form-group">
+                      <input type="submit" value="Enviar">
+                  </div>
+                </form>
               </div>
             </div>
             <div class="col-md-3 ml-4 border-left d-none d-md-block">
@@ -488,8 +518,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- leouve tv -->
-                <!--  -->
                 <div id="leouve-tv" class="mb-3">
                   <div class="title-section mb-3">
                     Leouve TV
@@ -504,11 +532,10 @@
                     </div>
                   </div>
                 </div>
-                <!--  -->
-              </div>
               </div>
             </div>
           </div>
+        </div>
       </section>
       <footer id="footer" class="pt-5">
         <div class="container">
